New fasc8b, prettier script output, cleanup

--- a/taocp.html
+++ b/taocp.html
@@ -172,8 +172,13 @@
     <td></td>
 </tr>
 <tr>
+    <td class="inprogress"><div class="subsubsection">7.2.2.5. <em>Cliques</em></div></td>
+    <td><a href="fasc8b.pdf">8B</a></td>
+    <td>8</td>
+    <td></td>
+</tr>
+<tr>
     <td>
-      <div class="subsubsection">7.2.2.5. <em>Cliques</em></div>
       <div class="subsubsection">7.2.2.6. <em>Covers</em></div>
       <div class="subsubsection">7.2.2.7. <em>Squares</em></div>
     </td>
@@ -233,6 +238,6 @@
 </table>
 
 <p/>
-<em>Revision date:</em> <strong>2020-01-30</strong>.
+<em>Revision date:</em> <strong>2020-02-03</strong>.
 
 </html>
