add section 7.2.3 to the Volume 4 outline

--- a/taocp.html
+++ b/taocp.html
@@ -198,6 +198,12 @@
     <td>26</td>
     <td></td>
 </tr>
+<tr>
+    <td><div class="subsection">7.2.3. <em>Generating inequivalent patterns</em></div></td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
 <tr class="book">
   <td colspan="4">The Remainder of Volume 4</td>
 </tr>
