--- a/taocp.html
+++ b/taocp.html
@@ -114,7 +114,7 @@
 <tr>
     <td class="completed">Volume 4, Fascicles 0-4 (bundled together)</td>
     <td>-</td>
-    <td>933</td>
+    <td>941</td>
     <td><a href="https://www.amazon.com/Art-Computer-Programming-Vol-Fascicles/dp/0321637135">
       Volume 4, Fascicles 0-4 (5 Volume Set)</a><br>
       3 Apr 2009, 944pp
@@ -162,13 +162,13 @@
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.3. <em>Constraint satisfaction</em></div></td>
     <td><a href="fasc7a.pdf">7A</a></td>
-    <td>44</td>
+    <td>100</td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.4. <em>Hamiltonian paths and cycles</em></div></td>
     <td><a href="fasc8a.pdf">8A</a></td>
-    <td>33</td>
+    <td>34</td>
     <td></td>
 </tr>
 <tr>
@@ -215,9 +215,23 @@
       <div class="subsection">7.4.2. <em>Special classes of graphs</em></div>
       <div class="subsection">7.4.3. <em>Expander graphs</em></div>
       <div class="subsection">7.4.4. <em>Random graphs</em></div>
-      <div class="section">7.5. <em>Network algorithms</em></div>
-      <div class="subsection">7.5.1. <em>Distinct representatives</em></div>
-      <div class="subsection">7.5.2. <em>The assignment problem</em></div>
+	</td>
+	<td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+	<td class="inprogress">
+	  <div class="section">7.5. <em>Graphs and optimization</em></div>
+      <div class="subsection">7.5.1. <em>Bipartite matching</em></div>
+	</td>
+	<td><a href="fasc14a.pdf">14A</a></td>
+    <td>19</td>
+    <td></td>
+</tr>
+<tr>
+	<td>
+	  <div class="subsection">7.5.2. <em>The assignment problem</em></div>
       <div class="subsection">7.5.3. <em>Network flows</em></div>
       <div class="subsection">7.5.4. <em>Optimum subtrees</em></div>
       <div class="subsection">7.5.5. <em>Optimum matching</em></div>
@@ -244,6 +258,6 @@
 </table>
 
 <p/>
-<em>Revision date:</em> <strong>2020-10-18</strong>.
+<em>Revision date:</em> <strong>2021-06-24</strong>.
 
 </html>
