check up to fasc20, add fasc12a to the report

--- a/taocp.html
+++ b/taocp.html
@@ -162,19 +162,19 @@
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.3. <em>Constraint satisfaction</em></div></td>
     <td><a href="fasc7a.pdf">7A</a></td>
-    <td>100</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.4. <em>Hamiltonian paths and cycles</em></div></td>
     <td><a href="fasc8a.pdf">8A</a></td>
-    <td>34</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.5. <em>Cliques</em></div></td>
     <td><a href="fasc8b.pdf">8B</a></td>
-    <td>8</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
@@ -189,13 +189,13 @@
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.8. <em>A potpourri of puzzles</em></div></td>
     <td><a href="fasc9b.pdf">9B</a></td>
-    <td>30</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.9. <em>Estimating backtrack costs</em></div></td>
     <td><a href="fasc9c.pdf">9C</a></td>
-    <td>26</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
@@ -208,10 +208,21 @@
   <td colspan="4">The Remainder of Volume 4</td>
 </tr>
 <tr>
-    <td>
-      <div class="section">7.3. <em>Shortest paths</em></div>
+    <td><div class="section">7.3. <em>Shortest paths</em></div></td>
+	<td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+	<td class="inprogress">
       <div class="section">7.4. <em>Graph algorithms</em></div>
       <div class="subsection">7.4.1. <em>Components and traversal</em></div>
+	</td>
+	<td><a href="fasc12a.pdf">12A</a></td>
+    <td></td>
+    <td></td>
+<tr>
+	<td>
       <div class="subsection">7.4.2. <em>Special classes of graphs</em></div>
       <div class="subsection">7.4.3. <em>Expander graphs</em></div>
       <div class="subsection">7.4.4. <em>Random graphs</em></div>
@@ -226,7 +237,7 @@
       <div class="subsection">7.5.1. <em>Bipartite matching</em></div>
 	</td>
 	<td><a href="fasc14a.pdf">14A</a></td>
-    <td>19</td>
+	<td></td>
     <td></td>
 </tr>
 <tr>
@@ -250,14 +261,14 @@
 </tr>
 <tr>
     <td class="inprogress">8. <em>Recursion</em></td>
-    <td><a href="fasc16a.pdf">16A</a></td>
-    <td>9</td>
+    <td><a href="fasc20a.pdf">20A</a></td>
+    <td></td>
     <td></td>
 </tr>
 
 </table>
 
 <p/>
-<em>Revision date:</em> <strong>2021-06-24</strong>.
+<em>Revision date:</em> <strong>2021-11-12</strong>.
 
 </html>
