update the script, sync at 2023-12-31

--- a/taocp.html
+++ b/taocp.html
@@ -123,7 +123,7 @@
 <tr>
     <td class="completed">Volume 4A: <em>Combinatorial Algorithms, Part 1</em></td>
     <td>-</td>
-    <td>883<br>+xvi&nbsp;&nbsp;</td>
+    <td>xvi<br>+883</td>
     <td><a href="https://www.amazon.com/Art-Computer-Programming-Combinatorial-Algorithms/dp/0201038048">
       Volume 4A: Combinatorial Algorithms, Part 1</a><br>
       22 Jan 2011, 912pp
@@ -160,21 +160,33 @@
     </td>
 </tr>
 <tr>
+    <td class="completed">Volume 4B: <em>Combinatorial Algorithms, Part 2</em></td>
+    <td>-</td>
+    <td>xviii<br>+714</td>
+    <td><a href="https://www.amazon.com/Art-Computer-Programming-Combinatorial-Information/dp/0201038064">
+      Volume 4B: Combinatorial Algorithms, Part 2</a><br>
+      8 Oct 2022, 736pp
+    </td>
+</tr>
+<tr class="book">
+  <td colspan="4">The Remainder of Volume 4</td>
+</tr>
+<tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.3. <em>Constraint satisfaction</em></div></td>
     <td><a href="fasc7a.pdf">7A</a></td>
-    <td></td>
+    <td>217</td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.4. <em>Hamiltonian paths and cycles</em></div></td>
     <td><a href="fasc8a.pdf">8A</a></td>
-    <td></td>
+    <td>36</td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.5. <em>Cliques</em></div></td>
     <td><a href="fasc8b.pdf">8B</a></td>
-    <td></td>
+    <td>8</td>
     <td></td>
 </tr>
 <tr>
@@ -189,13 +201,13 @@
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.8. <em>A potpourri of puzzles</em></div></td>
     <td><a href="fasc9b.pdf">9B</a></td>
-    <td></td>
+    <td>47</td>
     <td></td>
 </tr>
 <tr>
     <td class="inprogress"><div class="subsubsection">7.2.2.9. <em>Estimating backtrack costs</em></div></td>
     <td><a href="fasc9c.pdf">9C</a></td>
-    <td></td>
+    <td>26</td>
     <td></td>
 </tr>
 <tr>
@@ -203,9 +215,6 @@
     <td></td>
     <td></td>
     <td></td>
-</tr>
-<tr class="book">
-  <td colspan="4">The Remainder of Volume 4</td>
 </tr>
 <tr>
     <td><div class="section">7.3. <em>Shortest paths</em></div></td>
@@ -217,9 +226,11 @@
 	<td class="inprogress">
       <div class="section">7.4. <em>Graph algorithms</em></div>
       <div class="subsection">7.4.1. <em>Components and traversal</em></div>
+	  <div class="subsubsection">7.4.1.1. <em>Union-find algorithms</em></div>
+	  <div class="subsubsection">7.4.1.2. <em>Depth-first search</em></div>
 	</td>
 	<td><a href="fasc12a.pdf">12A</a></td>
-    <td></td>
+	<td>39</td>
     <td></td>
 <tr>
 	<td>
@@ -237,7 +248,7 @@
       <div class="subsection">7.5.1. <em>Bipartite matching</em></div>
 	</td>
 	<td><a href="fasc14a.pdf">14A</a></td>
-	<td></td>
+	<td>20</td>
     <td></td>
 </tr>
 <tr>
@@ -261,14 +272,14 @@
 </tr>
 <tr>
     <td class="inprogress">8. <em>Recursion</em></td>
-    <td><a href="fasc20a.pdf">20A</a></td>
-    <td></td>
+    <td><a href="fasc16a.pdf">16A</a></td>
+    <td>9</td>
     <td></td>
 </tr>
 
 </table>
 
 <p/>
-<em>Revision date:</em> <strong>2021-11-12</strong>.
+Revision date:</em> <strong>2023-12-31</strong>.
 
 </html>
